Finish all test cases

--- a/HW 2 JsTPS Ammar Chishti/index.html
+++ b/HW 2 JsTPS Ammar Chishti/index.html
@@ -1,8 +1,33 @@
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="./css/style.css" />
 
+<script type="text/javascript" src="./test/jsTPS_Unit_Tests.js">
+    window.onload = main();
+</script>
+</head>
+
+<body>
+
+<div id="jsTPS_unit_testing_div">
+    <h1>JsTPS Unit Testing Results</h1>
+    <h2>Ammar Chishti 316 HW 2</h2>
+</div>
+
+
+<div id="jsTPS_tester_div">
+    <h1 center>Hello</h1>
+</div>
+</body>
+
+</html>
+
+
+<!--
 <script type="module" src="./JsTPS/jTPS.js"></script>
 <script type="module" src="./JsTPS/test.js"></script>
 
-<!--
+
 <head>
     <title>@todo - The Todo List Manager</title>
     <link href="./css/fonts/Lexend Exa/css.css" rel="stylesheet">
